<resources>
    <string name="app_name">Movies</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="worldcinema">WorldCinema</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="signIn">Войти</string>
    <string name="discussions">Обсуждения</string>
    <string name="favorites">Избранное</string>
    <string name="newString">Новое</string>
    <string name="title_activity_main_screen">Main_Screen</string>
    <string name="title_activity_chat_list_screen">Chat_List_Screen</string>
    <string name="lucifer">Lucifer</string>
    <string name="theWitcher">The Witcher</string>
    <string name="lost">LOST</string>
    <string name="Witcher">Witcher</string>
    <string name="Jessica">Jessica Jones</string>
    <string name="Magicans">Magicans</string>
    <string name="theMagicans">The Magicans</string>
    <string name="title_activity_movies_screen">Movies_Screen</string>
</resources>