<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".ChatListActivity"
    tools:deviceIds="wear">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_boxedEdges="all">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/inner_frame_layout_padding"
            app:layout_boxedEdges="all">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discussions"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textColor="@color/blue"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lucifer"
                android:textColor="@color/white"
                android:layout_marginTop="55dp"
                android:layout_marginLeft="15dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectange"
                android:layout_marginTop="95dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theWitcher"
                android:textColor="@color/white"
                android:layout_marginTop="115dp"
                android:layout_marginLeft="15dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectange"
                android:layout_marginTop="155dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lost"
                android:textColor="@color/white"
                android:layout_marginTop="175dp"
                android:layout_marginLeft="15dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectange"
                android:layout_marginTop="215dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theMagicans"
                android:textColor="@color/white"
                android:layout_marginTop="235dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="20dp"/>

        </FrameLayout>
    </ScrollView>
</androidx.wear.widget.BoxInsetLayout>