<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear"
    android:background="@color/black">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_boxedEdges="all">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/inner_frame_layout_padding"
            app:layout_boxedEdges="all">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/worldcinema"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/blue"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="16dp"
                android:textSize="12dp"/>
            <EditText
                android:id="@+id/login"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:hint="you@example.com"
                android:textSize="12dp"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="12dp"
                android:inputType="textEmailAddress"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/blue"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="16dp"
                android:textSize="12dp"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:hint="Ваш пароль"
                android:textSize="12dp"
                android:layout_marginTop="110dp"
                android:layout_marginLeft="12dp"
                android:inputType="textPassword"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:text="@string/signIn"
                android:textAllCaps="false"
                android:textSize="12dp"
                android:background="@color/blue"
                android:onClick="toScreen"/>
        </FrameLayout>
    </ScrollView>
</androidx.wear.widget.BoxInsetLayout>