<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MoviesScreenActivity"
    tools:deviceIds="wear">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_boxedEdges="all">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newString"
                android:layout_gravity="center"
                android:textColor="@color/blue"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="3dp"
                android:textStyle="bold"
                android:textSize="13sp"/>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp">

                <ImageView
                    android:id="@+id/rectangle1"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6.5dp"
                    android:src="@drawable/rectange" />

                <ImageView
                    android:id="@+id/FilmImage1"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_alignStart="@+id/rectangle1"
                    android:layout_alignTop="@+id/rectangle1"
                    android:layout_alignEnd="@+id/rectangle1"
                    android:layout_marginStart="67dp"
                    android:layout_marginEnd="67dp"
                    android:layout_marginTop="33dp"
                    android:src="@drawable/play" />

                <TextView
                    android:id="@+id/film1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/rectangle1"
                    android:layout_alignBottom="@+id/rectangle1"
                    android:textSize="13.2sp"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/Witcher"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp">

                <ImageView
                    android:id="@+id/rectangle2"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6.5dp" />

                <ImageView
                    android:id="@+id/FilmImage2"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_alignStart="@+id/rectangle2"
                    android:layout_alignTop="@+id/rectangle2"
                    android:layout_alignEnd="@+id/rectangle2"
                    android:layout_marginStart="67dp"
                    android:layout_marginEnd="67dp"
                    android:layout_marginTop="33dp"
                    android:src="@drawable/play" />

                <TextView
                    android:id="@+id/film2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/rectangle2"
                    android:layout_alignBottom="@+id/rectangle2"
                    android:textSize="13.2sp"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/Jessica"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp">

                <ImageView
                    android:id="@+id/rectangle3"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6.5dp" />

                <ImageView
                    android:id="@+id/FilmImage3"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_alignStart="@+id/rectangle3"
                    android:layout_alignTop="@+id/rectangle3"
                    android:layout_alignEnd="@+id/rectangle3"
                    android:layout_marginStart="67dp"
                    android:layout_marginEnd="67dp"
                    android:layout_marginTop="33dp"
                    android:src="@drawable/play" />

                <TextView
                    android:id="@+id/film3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/rectangle3"
                    android:layout_alignBottom="@+id/rectangle3"
                    android:textSize="13.2sp"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/Magicans"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</androidx.wear.widget.BoxInsetLayout>